Fix z-index on heroImage button

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,9 @@
 /* Header and Menu CSS */
+a {
+  z-index: 400;
+}
+
+
 .header {
   background-color: #194b1e;
   height: 300px;
@@ -109,12 +114,10 @@
 
 .visitMainWebsiteButton:hover {
   color: white;
-  transform: scale(4.1);
-  cursor: hand;
-  border-radius: 15px;
-  font-size: 1.4vw;
-  background-color: #194b1e;
+  transform: scale(1.3);
+  background-color: #2a6f31;
   padding: 1.8vw;
+  border: 2px solid white;
 
 }
 
@@ -335,7 +338,10 @@
   .socialIcons {
     display: none;
   }
-
+  
+  .ContactInfo{
+    display: none;
+  }
   .menu-toggle {
     display: block;
     position: absolute;
